# bytewax

./: .gitignore  Cargo.toml  deny.toml  justfile  pyproject.toml  stubgen.py
.github/workflows/: CD.yml  CI.yml  benches.yml
docs/: intersphinxdump.py  renderer.py
docs/guide/concepts/: joins.md
docs/tutorials/handling-missing-data/: missing_data_dataflow.py
docs/tutorials/orderbook-guide/: orderbook_dataflow.py
examples/: 1brc.py  batch_operator.py  confluent_serde.py  event_time_processing.py  orderbook.py  poll_and_split.py  redpanda_anomaly_detection.py  redpanda_serde.py  search_session.py
pysrc/bytewax/: dataflow.py  inputs.py  outputs.py  recovery.py  run.py  testing.py  tracing.py
pysrc/bytewax/connectors/: demo.py  files.py
pysrc/bytewax/connectors/kafka/: __init__.py  operators.py
pysrc/bytewax/operators/: __init__.py  windowing.py
pytests/: conftest.py  test_execution.py  test_inputs.py  test_integration.py  test_outputs.py  test_parse.py  test_recovery.py  test_testing.py  test_tracing.py
pytests/connectors/: test_files.py  test_kafka.py  test_kafka_unit.py
pytests/operators/: test_branch.py  test_flat_map_value.py  test_flatten.py  test_inspect_debug.py  test_key_on.py  test_key_rm.py  test_output_close.py  test_redistribute.py  test_stateful_batch.py  test_stateful_flat_map.py  test_stateful_map.py
requirements/: build.in  dev.in  dev.txt
src/: dataflow.rs  errors.rs  inputs.rs  macros.rs  operators.rs  outputs.rs  pyo3_extensions.rs  recovery.rs  run.rs  timely.rs  worker.rs
src/metrics/: mod.rs
src/tracing/: jaeger_tracing.rs  mod.rs  otlp_tracing.rs
src/webserver/: mod.rs
