[package]
name = "bytewax"
version = "0.21.1"
edition = "2024"
rust-version = "1.93.1"

[lib]
name = "bytewax"
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.5.17" }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
fastrand = { version = "2" }
num = { version = "0.4.0" }
opentelemetry = { version = "0.20", features = ["rt-tokio", "metrics"] }
opentelemetry_sdk = { version = "0.20", features = ["metrics"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13", features = ["trace", "reqwest-client", "grpc-tonic"] }
opentelemetry-prometheus = "0.13.0"
prometheus = { version = "0.13.3" }
pyo3 = { version = "0.28", features = [ "macros", "chrono", "py-clone"] }
rusqlite = { version = "0.30.0", features = ["bundled", "series"] }
rusqlite_migration = { version = "1.1.0" }
seahash = { version = "4.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow.git", rev = "432ef57", features = ["bincode"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-opentelemetry = { version = "0.20" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pyo3 = { version = "0.28", features = ["macros", "chrono", "py-clone"] }
serde_test = { version = "1.0" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(Py_3_13)'] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Intentional: all modules are pub(crate) in lib.rs
redundant_pub_crate = "allow"
# Intentional: complex domain logic requires many params/lines
too_many_lines = "allow"
too_many_arguments = "allow"
# Intentional: numeric conversions in metrics/timeseries code
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
# PyO3 function signatures require specific types
needless_pass_by_value = "allow"
# PyO3 closures need specific captures
redundant_closure = "allow"
# Restriction cherry-picks: prevent debug/print macros in library code
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = "fat"
codegen-units = 1

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
