[project]
name = "bytewax"
dynamic = ["version"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "typing_extensions>=4",
    "prometheus-client>=0.18"
]

extras = [
    "kafka",
]

[project.optional-dependencies]
kafka = [
    "requests>=2.0",
    "fastavro>=1.8",
    "confluent-kafka>=2.0.2",
]

[project.urls]
"Source Code" = "https://github.com/bytewax/bytewax"
Issues = "https://github.com/bytewax/bytewax/issues"
Documentation = "https://docs.bytewax.io/"
Changelog = "https://github.com/bytewax/bytewax/blob/main/CHANGELOG.md"

[metadata]
long_description = "file: README.md"
long_description_content_type = "text/markdown"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "bytewax._bytewax"
python-source = "pysrc"

[tool.pytest.ini_options]
addopts = "-v"
markers = [
    "integration: integration tests requiring external services",
]

[tool.coverage.run]
source = ["bytewax"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
strict_equality = true
no_implicit_reexport = true
exclude = [
    "^pytests/",
    "^docs/",
    "^examples/",
    "^stubgen\\.py$",
]

[[tool.mypy.overrides]]
module = "confluent_kafka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpickle.*"
ignore_missing_imports = true

# Third-party modules used in examples/ and connectors/ that lack type stubs.
[[tool.mypy.overrides]]
module = [
    "fastavro",
    "fastavro.*",
    "pandas",
    "pandas.*",
    "fake_web_events",
    "fake_web_events.*",
    "river",
    "river.*",
    "requests",
    "requests.*",
    "websockets",
    "websockets.*",
    "pyarrow",
    "pyarrow.*",
    "aiohttp_sse_client",
    "aiohttp_sse_client.*",
    "numpy",
    "numpy.*",
    "docutils",
    "docutils.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C901",
    "D",
    "DTZ",
    "E",
    "EM",
    "F",
    "I",
    "PL",
    "RUF",
    "PT",
    "S",
    "SIM",
    "TC",
    "UP",
    "W",
]
ignore = [
    "D105",
    "E731",
    "PLR",
    "PT013",
    "RUF005",
    "SIM102",
    "SIM105",
    "SIM108",
    "SIM115",
    "UP007",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
# Docs tutorials: like examples, allow unused unpacking vars and pseudo-random
"docs/tutorials/**/*.py" = ["D", "RUF059", "S311"]
# Examples: no docstrings required, allow pseudo-random generators and asserts
"examples/*.py" = ["D", "S101", "S311"]
"examples/**/*.py" = ["D", "S101", "S311"]
# Tests: no docstrings required, allow asserts, subprocess calls, and try-except-pass
"pytests/test_flows/*.py" = ["D", "S101"]
"test_*.py" = ["D", "S101"]
"pytests/*.py" = ["S101", "S603", "S110"]
"pytests/**/*.py" = ["S101", "S603", "S110"]
# Because it has huge literals in it.
"pytests/test_visualize.py" = ["E501"]
